<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="android.com.myappfirst.activity.MainActivity"
    android:background="#000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/form_title"
        android:gravity="center_horizontal"
        android:textColor="@color/formTitle"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/yellow"
        android:layout_below="@id/form_title"
        android:id="@+id/horz_line"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/form_title"
        android:id="@+id/name_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/name"
            android:textColor="#fff"
            android:id="@+id/txt_fname"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                style="@style/editTextStyle"
                />

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:theme="@style/editTextStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/name_layout"
        android:id="@+id/email_layout"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/email"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:id="@+id/edt_email_address"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            style="@style/editTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/email_layout"
        android:id="@+id/phone_layout"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/phone"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:id="@+id/edt_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/phone"
            style="@style/editTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/phone_layout"
        android:id="@+id/address_layout"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/address"
            android:textColor="#fff"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:id="@+id/edt_address"
            android:hint="@string/your_address"
            style="@style/editTextStyle"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/address_layout"
        android:id="@+id/btn_layout"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_centerInParent="true"
        >

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:text="@string/submit"
            android:onClick="formSubmitOnClick"
            android:background="@drawable/btn_shape"
            android:textColor="@color/btnText"
            android:drawableRight="@drawable/btn_arrow"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:paddingRight="20px"
            />


        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:background="@drawable/btn_shape"
            android:textColor="@color/btnText"
            android:drawableRight="@drawable/cancel"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:paddingRight="20px"

            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_layout"
        android:text="Please come and join with us!!"
        android:layout_alignParentBottom="true"
        android:textColor="@color/yellow"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>
